@@ -126,7 +126,7 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.8.1</version>
 					<configuration>
-						<release>11</release>
+						<release>17</release>
 						<encoding>UTF-8</encoding>
 					</configuration>
 				</plugin>
@@ -150,7 +150,16 @@
 						<useSystemClassLoader>false</useSystemClassLoader>
 						<argLine>-Duser.language=en -Duser.region=US
 							-Djava.locale.providers=SPI,COMPAT
-							-Des.set.netty.runtime.available.processors=false</argLine>
+							-Des.set.netty.runtime.available.processors=false
+							--add-opens java.base/java.lang=ALL-UNNAMED
+							--add-opens java.base/java.security.cert=ALL-UNNAMED
+							--add-opens java.base/java.nio.channels=ALL-UNNAMED
+							--add-opens java.base/java.net=ALL-UNNAMED
+							--add-opens java.base/javax.net.ssl=ALL-UNNAMED
+							--add-opens java.base/java.nio.file=ALL-UNNAMED
+							--add-opens java.base/java.time=ALL-UNNAMED
+							--add-opens java.management/java.lang.management=ALL-UNNAMED
+						</argLine>
 					</configuration>
 				</plugin>
 				<plugin>
